made the method checkTimeLivingInCountry private